# B2Travel

./: README.md  demo.html  pyproject.toml
agent/: main.py  pyproject.toml
backend/: pyproject.toml  test_agent_destination.py  test_agent_flight.py  test_agent_vibe.py
backend/app/: config.py  db.py  main.py
backend/app/endpoints/: coordinates.py  delete.py  events.py  flights.py  health.py  ingest.py  mflix.py  recommend.py  retrieve.py
backend/app/utils/: clip_embeddings.py  projection.py
chrome_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: a.html  b2travel.html
src/voice/: agent2.py
