[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.14.1",
    "python-multipart>=0.0.20",
    "requests>=2.33.1",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "umap-learn>=0.5.12",
    "uvicorn[standard]>=0.46.0",
]
